--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,18 @@
         android:theme="@style/Theme.GURU2">
         <activity android:name=".attend_confirm"> </activity>
         <activity android:name=".admin_read_card" />
-        <activity android:name=".nfc_reader" />
+
         <activity android:name=".access_record" />
-        <activity android:name=".idcard" />
+        <activity android:name=".idcard" >
+        <intent-filter>
+            <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
+            <category android:name="android.intent.category.DEFAULT" />
+
+            <data android:mimeType="application/vnd.com.example.android.beam" />
+
+            <action android:name="android.nfc.action.TECH_DISCOVERED" />
+        </intent-filter></activity>
         <activity
             android:name=".admin_login_first"
             android:parentActivityName=".MainActivity" />
@@ -31,13 +40,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
             <!-- intent filter 추가함 -->
+            <activity android:name=".nfc_reader" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:mimeType="text/plain" />
+                <data android:mimeType="application/vnd.com.example.android.beam" />
 
                 <action android:name="android.nfc.action.TECH_DISCOVERED" />
             </intent-filter>
