--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GURU2">
-        <activity android:name=".login_first"></activity>
-        <activity android:name=".attend_confirm"></activity>
-        <activity android:name=".admin_read_card" />
-        <activity android:name=".access_record" />
-        <activity android:name=".idcard">
+        android:theme="@style/SplashTheme">
+
+        <activity android:name="login_first"
+            android:theme="@style/ThemeGURU2"/>
+        <activity android:name="attend_confirm"
+            android:theme="@style/ThemeGURU2"/>
+        <activity android:name="admin_read_card"
+            android:theme="@style/ThemeGURU2"/>
+        <activity android:name="access_record"
+            android:theme="@style/ThemeGURU2"/>
+        <activity android:name="idcard">
+            android:theme="@style/ThemeGURU2"
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
@@ -32,9 +38,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".admin_login_first"
+            android:name="admin_login_first"
+            android:theme="@style/ThemeGURU2"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
+            android:theme="@style/ThemeGURU2"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.nfc.action.TAG_DISCOVERED" />
@@ -42,7 +50,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- intent filter 추가함 -->
-        <activity android:name=".nfc_reader">
+        <activity android:name="nfc_reader">
+            android:theme="@style/ThemeGURU2"
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
